<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/activity_forgot_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".ForgotPasswordActivity"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvForgotPassword"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/forgot_password_msg"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvForgotPassMsg"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editEmail"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/reset_password"
            android:textColor="@android:color/black" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_forgot_pass"
            android:textSize="20sp" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
