<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/eight_padding"
    android:layout_marginTop="@dimen/eight_padding"
    android:layout_marginRight="@dimen/eight_padding"
    android:layout_marginBottom="@dimen/eight_padding"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ScrollView"
        android:layout_width="@dimen/zero_padding"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="@dimen/reset_padding"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:showIn="@layout/activity_login">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/lightblue500"
                android:textSize="@dimen/app_name_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_email_input"
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/general_padding"
                    android:textColorHint="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_email_input"
                android:hint="@string/password">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/general_padding"
                    android:textColorHint="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_password_input"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_padding"
                android:background="@drawable/rounded_button_transparent"
                android:padding="@dimen/general_padding"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset_password_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@null"
                android:padding="@dimen/general_padding"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reset_password_button"
                android:padding="@dimen/general_padding"
                android:text="@string/text_view_signup"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent" />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
