<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    tools:context=".RegisterActivity">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:showIn="@layout/activity_register">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/lightblue500"
                android:textSize="@dimen/app_name_size" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/email"
                android:layout_centerHorizontal="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/errorInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_email_input"
                android:layout_alignEnd="@+id/edit_email_input"
                android:layout_alignRight="@+id/edit_email_input"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/errorInputLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="23dp"
                android:background="@color/lightblue500"
                android:text="@string/Register" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_register"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="16dp"
                android:text="@string/click_to_login"
                android:textSize="20sp" />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
